# afripay-scaffold-agent

./: .gitignore  AGENTS.md  BUILD_LOG.md  CAPSTONE_SPEC.md  README.md  pyproject.toml
afripay/: __init__.py  __main__.py  cli.py
frameworks/: udhr.json
security/: rules.yaml
src/ally/: orchestrator.py
tests/: test_cli.py  test_orchestrator.py
